# reach

./: .dockerignore  .gitignore  API.md  ARCHITECTURE.md  Dockerfile  LICENSE  POLICIES.md  README.md  SECURITY.md  SELF_HOSTING.md  docker-compose.yml
agent/: .dockerignore  Dockerfile  README.md  go.mod  install.sh  k8s.go  k8s_exec.go  k8s_exec_test.go  k8s_lease.go  k8s_lease_test.go  k8s_test.go  main.go  main_test.go  metrics.go  metrics_test.go  reach-agent.service  sandbox_linux.go  sandbox_other.go  uninstall.sh  version_test.go
backend/: app.py  conftest.py  requirements-dev.txt  samconfig.toml  template.yaml
backend/alembic/: env.py
backend/handlers/: admin_agents.py  admin_approvals.py  admin_bootstrap.py  admin_jobs.py  admin_login.py  admin_policy.py  admin_tenants.py  admin_users.py  agent_claim.py  agent_deregister.py  agent_job_result.py  agent_rotate_token.py  agent_sync.py  audit_logs.py  cli_fleets.py  create_job.py  get_agent.py  get_job.py  heartbeat.py  jobs_fanout.py  list_agents.py  list_jobs.py  me.py  run_control.py  runs.py  tenant_agents.py  tenant_approvals.py  tenant_fleets.py  tenant_login.py  (+3 more)
cli/: README.md  pyproject.toml
cli/reach/: client.py  config.py  kubectl.py  main.py  mcp_server.py
cli/tests/: test_cli.py  test_cli_coverage.py  test_client.py  test_config.py  test_kubectl.py  test_mcp_server.py
scripts/: bootstrap.py  lambda-setup.sh  local-setup.sh  policy.py  release_agent.sh  release_agent_chart.sh  release_backend.sh  release_cli.sh  seed.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+168 files in other folders)
