[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reach"
dynamic = ["version"]
description = "CLI for remote machine agents"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
    "rich>=13",
]

[project.scripts]
reach = "reach.main:app"

[tool.hatch.version]
path = "reach/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["reach"]
